# LoFiBox-Zero

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COPYING  LICENSE  README.md
.github/workflows/: linux-ci.yml
assets/: README.md
data/: io.github.vicliu624.lofibox.desktop  io.github.vicliu624.lofibox.metainfo.xml
data/man/: lofibox.1
data/mime/: io.github.vicliu624.lofibox.xml
debian/: changelog  control  copyright  install  rules  watch
debian/source/: options
debian/tests/: control  smoke
docker/: dev-container.Dockerfile  package-build.Dockerfile
docs/: architecture.md  dependency-policy.md  engineering-check-report.md  media-backends.md  packaging.md  plugin-api.md  protocol-sources.md  release-process.md  third-party.md
docs/hardware/: m5stack-cardputerzero.md
docs/specification/: application-command-boundary-spec.md  cardputer-zero-adaptation-spec.md  copyright-resource-governance-spec.md  debian-official-archive-spec.md  dependency-policy-spec.md  github-pages-apt-repository-spec.md  implementation-status.md  integrated-product-core-spec.md  legacy-lofibox-product-guidance.md  linux-desktop-integration-spec.md  lofibox-cli-surface-spec.md  lofibox-terminal-ui-spec.md  lofibox-zero-app-state-spec.md  lofibox-zero-audio-dsp-spec.md  lofibox-zero-credential-spec.md  lofibox-zero-final-product-spec.md  lofibox-zero-layout-spec.md  lofibox-zero-library-indexing-spec.md  lofibox-zero-media-pipeline-spec.md  lofibox-zero-page-spec.md  lofibox-zero-persistence-spec.md  lofibox-zero-streaming-spec.md  lofibox-zero-text-input-spec.md  lofibox-zero-track-identity-spec.md  lofibox-zero-ui-spec-hierarchy.md  lofibox-zero-visual-design-spec.md  plugin-provider-system-spec.md  project-architecture-spec.md  runtime-command-session-architecture-spec.md  testing-ci-spec.md
packaging/apt/: README.md
scripts/: build-debian-package-image.ps1  build-dev-container.sh  build-github-pages-apt-repository.sh  check-architecture-boundaries.ps1  check-debian-builddeps.ps1  check-implementation-placement.ps1  check-spdx.ps1  create-orig-tarball.ps1  ensure-host-fpcalc.ps1  generate-windows-solution.ps1  install-pocketframe-wsl.ps1  install-pocketframe-wsl.sh  open-windows-solution.ps1  remote_media_tool.py  run-debian-package-validation.ps1  run-dev-container.ps1  run-dev-container.sh  run-dpkg-buildpackage.ps1  tag_writer.py  validate-packaging-skeleton.ps1  wsl-validate.sh
src/app/: app_assets.h  app_command_executor.cpp  app_command_executor.h  app_controller_set.h  app_debug_snapshot.h  app_input_router.cpp  app_input_router.h  app_lifecycle.cpp  app_lifecycle.h  app_page.h  app_page_model.cpp  app_page_model.h  app_projection_builder.cpp  app_projection_builder.h  app_renderer.cpp  app_renderer.h  app_runtime_context.cpp  app_runtime_context.h  app_runtime_state.h  app_state.h  audio_visualization.h  eq_ui_state.h  hello_app.cpp  hello_app.h  hello_app_runner.cpp  hello_app_runner.h  input_actions.cpp  input_actions.h  input_event.h  library_controller.cpp  library_controller.h  library_list_context.h  library_model.h  library_mutation_service.cpp  library_mutation_service.h  library_navigation_service.cpp  library_navigation_service.h  library_open_action_resolver.cpp  library_open_action_resolver.h  library_query_service.cpp  (+45 more)
src/application/: app_command_result.h  app_service_host.h  app_service_registry.cpp  app_service_registry.h  cache_command_service.cpp  cache_command_service.h  credential_command_service.cpp  credential_command_service.h  library_mutation_service.cpp  library_mutation_service.h  library_open_action_service.cpp  library_open_action_service.h  library_query_service.cpp  library_query_service.h  playback_command_service.cpp  playback_command_service.h  playback_status_query_service.cpp  playback_status_query_service.h  queue_command_service.cpp  queue_command_service.h  remote_browse_query_service.cpp  remote_browse_query_service.h  runtime_diagnostic_service.cpp  runtime_diagnostic_service.h  source_profile_command_service.cpp  source_profile_command_service.h
src/audio/: audio_pipeline_controller.cpp  audio_pipeline_controller.h
src/cache/: cache_manager.cpp  cache_manager.h
src/cli/: cli_format.h  direct_cli.cpp  direct_cli.h  runtime_cli.cpp  runtime_cli.h
src/core/: bitmap_font.cpp  bitmap_font.h  canvas.cpp  canvas.h  color.h  display_profile.h
src/desktop/: desktop_integration_boundary.cpp  desktop_integration_boundary.h
src/metadata/: enrichment_authority_policy.cpp  enrichment_authority_policy.h  match_confidence_guard.cpp  match_confidence_guard.h  metadata_governance.cpp  metadata_governance.h  metadata_merge_policy.cpp  metadata_merge_policy.h
src/platform/: surface_presenter.h
src/playback/: mixed_playback_queue.cpp  playback_backend_controller.cpp  playback_backend_controller.h  playback_completion_policy.cpp  (+16 more)
tests/: app_command_executor_smoke.cpp  app_input_router_smoke.cpp  app_lifecycle_smoke.cpp  app_page_model_smoke.cpp  application_command_boundary_smoke.cpp  audio_child_lifecycle_smoke.cpp  audio_pipeline_controller_smoke.cpp  bitmap_font_utf8_smoke.cpp  cache_manager_smoke.cpp  cli_options_smoke.cpp  desktop_open_runtime_command_smoke.cpp  desktop_security_completion_smoke.cpp  direct_cli_smoke.cpp  dsp_chain_smoke.cpp  dsp_profile_manager_smoke.cpp  embedded_artwork_smoke.cpp  embedded_metadata_smoke.cpp  enrichment_authority_policy_smoke.cpp  equalizer_smoke.cpp  filename_metadata_guess_smoke.cpp  final_surface_pages_smoke.cpp  hello_app_smoke.cpp  helper_script_path_smoke.cpp  host_audio_realtime_dsp_smoke.cpp  library_controller_smoke.cpp  library_governance_smoke.cpp  library_repository_smoke.cpp  library_scan_smoke.cpp  library_store_smoke.cpp  list_focus_visual_smoke.cpp  list_help_modal_smoke.cpp  logo_asset_transparency_smoke.cpp  lrclib_search_fallback_smoke.cpp  lyrics_page_smoke.cpp  lyrics_writeback_policy_smoke.cpp  main_menu_shortcuts_smoke.cpp  main_menu_visual_smoke.cpp  media_fixture_utils.h  media_search_queue_smoke.cpp  metadata_governance_smoke.cpp  (+42 more)
(+270 files in other folders)
